fix hide columns on small devices

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -52,6 +52,11 @@ html, body {
   }
 }
 
+.container {
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
 .container-fluid ul {
   display: inline-flex;
   list-style: none;
